--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="/source/index.html"
+                href="index.html"
                 >Home
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/source/places.html">Places</a>
+              <a class="nav-link" href="places.html">Places</a>
             </li>
           </ul>
         </div>
